--- a/digital/package.json
+++ b/digital/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "prepare": "husky install"
+    "lint": "eslint"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
