--- a/digital/package.json
+++ b/digital/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "@prisma/client": "^7.2.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -32,6 +33,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
