completed database migration

--- a/digital/package.json
+++ b/digital/package.json
@@ -35,5 +35,9 @@
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+"prisma": {
+  "seed": "npx tsx prisma/seed.ts"
+}
+
 }
