--- a/digital/package.json
+++ b/digital/package.json
@@ -15,8 +15,10 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^5.22.0",
+    "jsonwebtoken": "^9.0.3",
     "next": "16.1.1",
+    "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -32,12 +34,10 @@
     "husky": "^8.0.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
-    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
-"prisma": {
-  "seed": "npx tsx prisma/seed.ts"
-}
-
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
+  }
 }
