--- a/digital/package.json
+++ b/digital/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.1",
     "prisma": "^5.22.0",
