--- a/digital/package.json
+++ b/digital/package.json
@@ -19,6 +19,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.1",
     "prisma": "^5.22.0",
