implemendt secure file uploads using pre-signed URLs

--- a/digital/.env.example
+++ b/digital/.env.example
@@ -1,2 +1,8 @@
-# DATABASE_URL=postgresql://postgres:endpoint@123()@db.tlpqaqcebcpqinnzncdj.supabase.co:5432/postgre
-# NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
+DATABASE_URL=postgresql://postgres:endpoint@123()@db.tlpqaqcebcpqinnzncdj.supabase.co:5432/postgre
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
+AWS_REGION=ap-south-1
+AWS_BUCKET_NAME=your-bucket-name
