--- a/digital/package.json
+++ b/digital/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^6.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "ioredis": "^5.9.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.1",
     "prisma": "^5.22.0",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.30",
     "@types/react": "^19.2.7",
