--- a/digital/package.json
+++ b/digital/package.json
@@ -27,6 +27,7 @@
     "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "swr": "^2.3.8"
   },
   "devDependencies": {
