--- a/digital/package.json
+++ b/digital/package.json
@@ -28,12 +28,9 @@
     "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
- improve-form-ui
     "react-hook-form": "^7.71.1",
+    "swr": "^2.3.8",
     "zod": "^4.3.6"
-
-    "swr": "^2.3.8"
- main
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
