--- a/digital/.env.example
+++ b/digital/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:endpoint@123()@db.tlpqaqcebcpqinnzncdj.supabase.co:5432/postgre
+DATABASE_URL=postgresql://postgres:endpoint@123()@db.tlpqaqcebcpqinnzncdj.supabase.co:5432/postgres
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
 
 # AWS S3 Configuration
