--- a/digital/package.json
+++ b/digital/package.json
@@ -30,9 +30,9 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
+    "jose": "^5.9.6",
     "swr": "^2.3.8",
-    "zod": "^4.3.6",
-    "react-hot-toast": "^2.6.0"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
