--- a/digital/package.json
+++ b/digital/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "digital",
   "version": "0.1.0",
   "private": true,
@@ -21,6 +22,7 @@
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "dompurify": "^3.3.1",
     "ioredis": "^5.9.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.3",
@@ -29,6 +31,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "sanitize-html": "^2.17.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@types/node": "^20.19.30",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/sanitize-html": "^2.16.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.1.8",
