Add secret manager integration

--- a/digital/package.json
+++ b/digital/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^6.0.0",
+    "aws-sdk": "^2.1693.0",
     "bcrypt": "^6.0.0",
     "dompurify": "^3.3.1",
     "ioredis": "^5.9.2",
